--- a/MainWinFormApp/MainWinFormApp/Properties/Resources.resx
+++ b/MainWinFormApp/MainWinFormApp/Properties/Resources.resx
@@ -139,6 +139,9 @@
   <data name="barchart static" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\barchart static.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="walking man flipped" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\walking man flipped.gif;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
   <data name="crowd icon total 2" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\crowd icon total 2.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
@@ -166,7 +169,7 @@
   <data name="istockphoto-1061119906-612x612" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\istockphoto-1061119906-612x6121.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="walking man flipped" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\walking man flipped.gif;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="prize1" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\bin\Debug\images\prize1.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
 </root>
